cabal-version: 2.4
name:          aztecs-sdl-text
version:       0.5.0
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    matt@hunzinger.me
author:        Matt Hunzinger
synopsis:      A type-safe and friendly Entity-Component-System (ECS) for Haskell
description:   The Entity-Component-System (ECS) pattern is commonly used in video game develop to represent world objects.
               ECS follows the principal of composition over inheritence. Each type of
               object (e.g. sword, monster, etc), in the game has a unique EntityId. Each
               entity has various Components associated with it (material, weight, damage, etc).
               Systems act on entities which have the required Components.
homepage:      https://github.com/aztecs-hs/aztecs-sdl-text
category:      Game Engine

source-repository head
    type:     git
    location: https://github.com/aztecs-hs/aztecs-sdl-text.git

library
    exposed-modules:
        Aztecs.SDL.Text
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.6 && <5,
        aztecs >= 0.8 && <0.9,
        aztecs-sdl >= 0.5 && <0.6,
        containers >=0.6,
        deepseq >=1,
        mtl >=2,
        sdl2 >=2,
        sdl2-ttf >=2,
        text >=1.2,
        linear >= 1
